# rembrandt

./: Cargo.default.toml  Cargo.titan.toml  Cargo.toml  Makefile  build.rs  build_titan.rs  download_example_data.sh  rustc.version
examples/: cifar10.data  download_cifar10.sh  download_mnist.sh  imagenet.data  imagenet_alexnet.model  imagenet_nin.model  mnist.data  mnist_lenet.model
experiments/: plot_trace.py
librembrandt_reportserv/: Cargo.toml
librembrandt_reportserv/assets/html/: index.html
librembrandt_reportserv/src/: lib.rs
librembrandt_reportserv/tools/: test.rs
scripts/: run-mpirun.sh
src/: arch.rs  arch_new.rs  caffe_proto.proto  caffe_proto.rs  comm.rs  config.rs  data.rs  data_new.rs  data_old.rs  flow.rs  graph.rs  layer.rs  layer_new.rs  lib.rs  net.rs  old_opt.rs  operator.rs  opt.rs  opt_new.rs  util.rs  util_macros.rs
src/data/: augment.rs  codec.rs  lmdb_data.rs  mod.rs  varraydb_data.rs
src/operator/: affine.rs  arch.rs  checkpoint.rs  comm.rs  conv.rs  dropout.rs  graph.rs  input.rs  loss.rs  mod.rs  pool.rs  seq.rs  worker.rs
src/opt/: mod.rs  sgd.rs
src/opt/parallel/: dev_allreduce.rs  mod.rs  mpi_allreduce.rs
src/opt/second/parallel/: mod.rs  solver.rs
src/opt/sgd/: async.rs  mod.rs  new.rs
src/opt/sgd/parallel/: dev_allreduce.rs  mod.rs  solve.rs
src/solve/: cg.rs  lanczos.rs  mod.rs
src/templates/: mod.rs  resnet.rs  resnet_graph.rs  resnet_new.rs  vgg.rs
src/worker/: allreduce_dist.rs  dist_pipeline.rs  elasticserver_dist.rs  elasticserver_dist_rdma.rs  gossip_dist.rs  gossip_dist_dir.rs  gossip_dist_p2p.rs  gossip_dist_rdma.rs  gossip_pull_allreduce_dist_rdma.rs  gossip_pull_allreduce_v2_dist_rdma.rs  gossip_pull_dist_rdma.rs  mod.rs  old_gossip_dist.rs  paramserver_dist.rs
tests/: mnist-1layer-fc.rs  mnist-2layer-fc.rs  mnist-3layer-conv-arch.rs  mnist-3layer-conv.rs
tools/: bench-cublas.rs  bench-cudnn.rs  bench-kernels.rs  calculate-cifar10-mean.rs  dev-graph-train-imagenet.rs  dist-train-imagenet-shuf.rs  dist-train-imagenet.rs  dist-train-mnist.rs  dump-array3d-header.rs  graph-train-imagenet.rs  load-array3d.rs  mpi-graph-train-imagenet.rs  new-dist-train-imagenet.rs  run-rembrandt.rs  second-dev-graph-train-imagenet.rs  seq-train-imagenet.rs  sleep-test.rs  test-comm.rs  test-lmdb.rs  test-mpich.rs  test-openmpi.rs  test-varraydb.rs  train-cifar10.rs  train-gogod.rs  train-imagenet.rs  train-imagenet_saved.rs  train-mnist.rs
