[package]
name = "rembrandt"
version = "0.4.0"
authors = ["Peter Jin <peterhaijin@gmail.com>"]
build = "build.rs"

[lib]
name = "rembrandt"
path = "src/lib.rs"

[[bin]]
name = "bench-kernels"
path = "tools/bench-kernels.rs"

[[bin]]
name = "bench-cudnn"
path = "tools/bench-cudnn.rs"

[[bin]]
name = "bench-cublas"
path = "tools/bench-cublas.rs"

#[[bin]]
#name = "run-rembrandt"
#path = "tools/run-rembrandt.rs"

[dependencies]
byteorder = "*"
libc = "*"
rand = "*"
time = "*"

[dependencies.array]
path = "../libarray"

[dependencies.array_cuda]
path = "../libarray_cuda"

[dependencies.array_dist]
path = "../libarray_dist"

[dependencies.array_new]
path = "../libarray_new"

[dependencies.arraydb]
path = "../arraydb"

[dependencies.async]
path = "../libasync"

[dependencies.async_cuda]
path = "../libasync_cuda"

[dependencies.cuda]
path = "../libcuda"

[dependencies.cuda_dnn]
path = "../libcuda_dnn"

[dependencies.cuda_sparse]
path = "../libcuda_sparse"

[dependencies.episodb]
path = "../../episodb"

[dependencies.linalg]
path = "../liblinalg"

[dependencies.lmdb]
path = "../liblmdb"

[dependencies.protobuf]
path = "../rust-protobuf"

[dependencies.rembrandt_kernels]
path = "../rembrandt_kernels"

[dependencies.toml]
path = "../third_party/toml-rs"
