[package]
name = "rembrandt"
version = "0.4.0"
authors = ["Peter Jin <peterhaijin@gmail.com>"]
#build = "build.rs"

[lib]
name = "rembrandt"
path = "src/lib.rs"

[[bin]]
name = "test-mpich"
path = "tools/test-mpich.rs"

[[bin]]
name = "test-openmpi"
path = "tools/test-openmpi.rs"

[[bin]]
name = "train-mnist"
path = "tools/train-mnist.rs"

[[bin]]
name = "train-cifar10"
path = "tools/train-cifar10.rs"

[[bin]]
name = "dist-train-mnist"
path = "tools/dist-train-mnist.rs"

#[[bin]]
#name = "bench-kernels"
#path = "tools/bench-kernels.rs"

#[[bin]]
#name = "bench-cudnn"
#path = "tools/bench-cudnn.rs"

#[[bin]]
#name = "bench-cublas"
#path = "tools/bench-cublas.rs"

#[[bin]]
#name = "run-rembrandt"
#path = "tools/run-rembrandt.rs"

[dependencies]
byteorder = "*"
env_logger = "*"
libc = "*"
log = "*"
memmap = "*"
protobuf = { path = "../rust-protobuf" }
rand = "*"
threadpool = "*"
time = "*"
#toggle = "*"
toggle = { path = "../../libtoggle" }
toml = { path = "../third_party/toml-rs" }

array_cuda = { path = "../libarray_cuda" }
array_dist = { path = "../libarray_dist" }
array_new = { path = "../libarray_new" }
arraydb = { path = "../arraydb" }
cuda = { path = "../libcuda" }
cuda_dnn = { path = "../libcuda_dnn" } #, features = ["cudnn_v3"] }
episodb = { path = "../../episodb" }
lmdb = { path = "../liblmdb" }
mpich = { path = "../../libmpich" }
openmpi = { path = "../../libopenmpi" }
procgroup = { path = "../../libprocgroup" }
procgroup_mpi = { path = "../../libprocgroup_mpi" }
rembrandt_kernels = { path = "../rembrandt_kernels" }
#rembrandt_reportserv = { path = "../rembrandt_reportserv" }
rng = { path = "../../librng" }
worker = { path = "../../libworker" }

#[dependencies.array]
#path = "../libarray"

#[dependencies.async]
#path = "../libasync"

#[dependencies.async_cuda]
#path = "../libasync_cuda"

#[dependencies.cuda_sparse]
#path = "../libcuda_sparse"

#[dependencies.linalg]
#path = "../liblinalg"
